--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,19 @@
 @tailwind utilities;
 
 body {
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  background-color: #ffffff;
+  color: #111111;
+}
+
+/* Optional: smoother text rendering */
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
